# sauter-university-2025-challenge

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh  pyproject.toml  pytest.ini  requirements-test.txt
.github/workflows/: application-cicd.yml  cd.yaml  ci.yaml  infrastructure-iac.yml
app/: main.py
app/core/: exceptions.py  ons_client.py
app/models/: reservoir.py
app/repositories/: gcs_repository.py  reservoir_repository.py
app/routers/: reservoir.py
app/services/: reservoir_service.py
src/ML/: Dockerfile  app.py  modelo_ena_lstm.keras  requirements.txt  scaler_ena.pkl
src/ML/data/: download.py
src/ML/plot/: Analise do ML.ipynb  iplot.html  iplot.ipynb  iplot_renovado.ipynb
src/api/: .env.example  Dockerfile  main.py  requirements.txt
src/api/core/: logging_decorator.py  ons_client.py
src/api/models/: basin.py
src/api/repositories/: basin_repository.py  bigquery_repository.py  gcs_repository.py
src/api/routers/: basin.py
src/api/services/: basin_service.py
src/api/tests/: test_main.py
src/querys/: create_ena_bronze.sql  create_ena_feates.sql  create_ena_silver.sql  create_external_table .sql  create_gold_view.sql  insert_2025_procedure_silver.sql
src/terraform/: .terraform.lock.hcl  BACKEND_MIGRATION.md  README.md  TERRAFORM_BEST_PRACTICES.md  backend.tf  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
src/terraform/modules/artifact_registry/: main.tf  outputs.tf  variables.tf
src/terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
src/terraform/modules/budget/: main.tf  outputs.tf  variables.tf
src/terraform/modules/cloud_run/: main.tf  outputs.tf  variables.tf
src/terraform/modules/cloud_storage/: main.tf  outputs.tf  variables.tf
src/terraform/modules/iam/: main.tf  outputs.tf  variables.tf
src/terraform/modules/logging/: main.tf  outputs.tf  variables.tf
src/terraform/modules/monitoring/: main.tf  outputs.tf  test_alert.tf  variables.tf
src/terraform/modules/wif/: main.tf  outputs.tf  variables.tf
terraform/: .gitignore  main.tf
tests/: __init__.py
tests/integration/: __init__.py  test_basin_router.py
tests/unit/: test_basin_service.py  test_bigquery_repository.py  test_gcs_repository.py  test_ons_client.py
